--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-0": { "": "./" }
+        "psr-0": { "Skeleton": "src" }
     },
     "scripts"   :{
-        "post-install-cmd": "scripts\\Install\\Composer::postInstall"
+        "post-install-cmd": "Skeleton\\Installer\\Composer::postInstall"
     }
 }
