--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "bear/skeleton",
     "description": "Skeleton application for BEAR.Sunday",
+    "license":"BSD-3-Clause",
     "require": {
         "php": ">=5.4.0"
     },
