--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Skeleton application for BEAR.Sunday",
     "license":"BSD-3-Clause",
     "require": {
-        "php": ">=5.4.0",
-        "composer/installers": "dev-master"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-0": { "Skeleton": "src" }
