--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,7 @@
     </testsuites>
 
     <logging>
-        <log type="coverage-html" target="build/coverage" title="BEAR.Sunday.application"
+        <log type="coverage-html" target="build/coverage" title=""
              charset="UTF-8" yui="true" highlight="true"
              lowUpperBound="35" highLowerBound="70"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
