move qa standard files to build/

--- a/build.xml
+++ b/build.xml
@@ -125,7 +125,7 @@
         <exec executable="phpmd">
             <arg path="${basedir}/src" />
             <arg value="text" />
-            <arg value="${basedir}/phpmd.xml" />
+            <arg value="${basedir}/build/phpmd.xml" />
         </exec>
     </target>
 
@@ -133,7 +133,7 @@
         <exec executable="phpmd">
             <arg path="${basedir}/src" />
             <arg value="xml" />
-            <arg value="${basedir}/phpmd.xml" />
+            <arg value="${basedir}/build/phpmd.xml" />
             <arg value="--reportfile" />
             <arg value="${basedir}/build/logs/pmd.xml" />
         </exec>
@@ -142,7 +142,7 @@
     <target name="phpcs"
             description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
         <exec executable="phpcs">
-            <arg value="--standard=${basedir}/phpcs.xml" />
+            <arg value="--standard=${basedir}/build/phpcs.xml" />
             <arg value="--warning-severity=0" />
             <arg path="${basedir}/src" />
         </exec>
@@ -152,7 +152,7 @@
         <exec executable="phpcs" output="/dev/null">
             <arg value="--report=checkstyle" />
             <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-            <arg value="--standard=${basedir}/phpcs.xml" />
+            <arg value="--standard=${basedir}/build/phpcs.xml" />
             <arg path="${basedir}/src" />
         </exec>
     </target>
@@ -181,7 +181,9 @@
     </target>
 
     <target name="phpdox" description="Generate API documentation using phpDox">
-        <exec executable="phpdox"/>
+        <exec executable="phpdox">
+            <arg value="--file=${basedir}/build/phpdox.xml"  />
+        </exec>
     </target>
 
     <target name="apigen" description="Generate API documentation using ApiGen">
