valid min composer.json

--- a/project.composer.json
+++ b/project.composer.json
@@ -1,10 +1,7 @@
 {
     "name": "bear/skeleton",
-    "authors": [
-        {
-            "name": ""
-        }
-    ],
+    "description":"n/a",
+    "license": "proprietary",
     "require": {
     }
 }
