--- a/project.composer.json
+++ b/project.composer.json
@@ -7,5 +7,22 @@
     },
     "require-dev": {
         "bear/dev-package": "~0.1@dev"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BEAR\\Skeleton\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BEAR\\Package\\": "vendor/bear/package/src-dev/"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
     }
 }
