--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "autoload": {
+        "psr-4": {
+            "BEAR\\Skeleton\\": "src/"
+        }
+    },
     "scripts"   :{
         "post-install-cmd": ["BEAR\\Skeleton\\Installer::postInstall"]
     }
