--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,30 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap="tests/bootstrap.php"
-         backupGlobals="false"
-         backupStaticAttributes="false"
-         strict="true"
-         colors="true"
-         timeoutForSmallTests="90"
-         verbose="true">
+<phpunit bootstrap="tests/bootstrap.php">
     <testsuites>
-        <testsuite name="BEAR application">
+        <testsuite>
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
 
     <logging>
-        <log type="coverage-html" target="build/coverage" title=""
-             charset="UTF-8" yui="true" highlight="true"
-             lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-html" target="build/coverage"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
         <log type="junit" target="build/logs/junit.xml" logIncompleteSkipped="false"/>
     </logging>
 
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="false">
+        <whitelist>
             <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
-
+    <php>
+        <ini name="xhprof.output_dir" value="./tests/tmp"/>
+        <ini name="xdebug.max_nesting_level" value="500"/>
+    </php>
 </phpunit>
