--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-nbproject
-._*
-.~lock.*
 .buildpath
 .DS_Store
 .idea
 .project
-.settings
-vendor
-cache.properties
-build
-tmp
-*.log
-*.tpl.php
-composer.phar
-resource.db
+.settings/
+.*.sw*
+.*.un~
+build/
+composer.lock
+nbproject
+tmp/
