--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
+nbproject
+._*
+.~lock.*
 .buildpath
 .DS_Store
 .idea
 .project
-.settings/
-.*.sw*
-.*.un~
-build/
-composer.lock
-nbproject
-tmp/
+.settings
+vendor
+cache.properties
+build
+tmp
+*.log
+*.tpl.php
+composer.phar
+resource.db
