--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bear/skeleton",
     "description": "Skeleton application for BEAR.Sunday",
-    "license":"MIT",
+    "license":"BSD-3-Clause",
     "require": {
         "php": ">=5.5.0"
     },
