add test scripts

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require-dev": {
         "composer/composer": ">=1.0.0-alpha10",
         "phpunit/phpunit": "~4.8",
-        "squizlabs/php_codesniffer": "~2.3"
+        "squizlabs/php_codesniffer": "~2.3",
+        "phpmd/phpmd": "~2.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -24,6 +25,11 @@
         "post-install-cmd": [
             "BEAR\\Skeleton\\Installer::postInstall",
             "./vendor/bin/composer dump-autoload"
+        ],
+        "test": [
+            "php vendor/phpmd/phpmd/src/bin/phpmd src text ./phpmd.xml",
+            "php vendor/squizlabs/php_codesniffer/scripts/phpcs",
+            "php vendor/phpunit/phpunit/phpunit"
         ]
     }
 }
