composer create-project no-dev option

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license":"MIT",
     "require": {
         "php": ">=5.5.0",
-        "bear/package": "~1.0"
+        "bear/package": "~1.0",
+        "composer/composer": ">=1.0.0-alpha10"
     },
     "require-dev": {
-        "composer/composer": ">=1.0.0-alpha10",
         "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd": "~2.3"
