--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "require": {
         "php": ">=5.5.0",
         "bear/package": "~1.0",
-        "composer/composer": ">=1.0.0-alpha10"
+        "josegonzalez/dotenv": "~2.0"
     },
     "require-dev": {
+        "composer/composer": ">=1.0.0-alpha10",
         "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd": "~2.3"
@@ -21,7 +22,10 @@
         }
     },
     "scripts" :{
-        "pre-install-cmd": ["BEAR\\Skeleton\\Installer::preInstall"],
+        "pre-install-cmd": [
+            "BEAR\\Skeleton\\Installer::preInstall",
+            "php --run \"touch('.env');\""
+        ],
         "post-install-cmd": [
             "BEAR\\Skeleton\\Installer::postInstall",
             "./vendor/bin/composer dump-autoload"
