--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require-dev": {
         "composer/composer": ">=1.0.0-alpha10",
         "phpunit/phpunit": "~4.8",
+        "phpunit/dbunit": "~2.0",
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd": "~2.3"
     },
