--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license":"MIT",
     "require": {
         "php": ">=5.5.0",
+        "roave/security-advisories": "dev-master",
         "bear/package": "~1.0",
         "josegonzalez/dotenv": "~2.0"
     },
