--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require-dev": {
         "composer/composer": ">=1.0.0-beta1",
         "phpunit/phpunit": "~4.8 || ~5.2",
+        "phpunit/dbunit": "~2.0",
         "squizlabs/php_codesniffer": "~2.5",
         "phpmd/phpmd": "~2.3"
     },
