--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "josegonzalez/dotenv": "~2.0"
     },
     "require-dev": {
-        "composer/composer": ">=1.0.0-beta1",
+        "composer/composer": "~1.0",
         "phpunit/phpunit": "~4.8 || ~5.2",
         "squizlabs/php_codesniffer": "~2.5",
         "phpmd/phpmd": "~2.3"
