--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
             "php-cs-fixer fix --config-file=./.php_cs",
             "phpcbf src"
         ],
-        "clear": "rm -rf var/tmp/* var/log/*",
+        "clean": "rm -rf var/tmp/* var/log/*",
         "serve-api": "php -S 127.0.0.1:8080 bootsrap/api.php",
         "serve-web": "php -S 127.0.0.1:8080 -t var/www var/www/index.php",
         "get": "php bootstrap/api.php get",
