fix "sh: php-cs-fixer: command not found" error when executing composer cs-fix
* fabpot/php-cs-fixer を依存ライブラリ(require-dev)に追加
* .php_csをbearsundayプロジェクト（Sunday, Resource, Packageで同じ内容）のものを追加

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "composer/composer": "~1.0",
         "phpunit/phpunit": "~4.8 || ~5.2",
         "squizlabs/php_codesniffer": "~2.5",
-        "phpmd/phpmd": "~2.3"
+        "phpmd/phpmd": "~2.3",
+        "fabpot/php-cs-fixer": "~1.11"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
