--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
     "scripts" :{
         "pre-install-cmd": "BEAR\\Skeleton\\Installer::preInstall",
         "pre-update-cmd": "BEAR\\Skeleton\\Installer::preInstall",
-        "post-create-project-cmd": "php --run \"touch('.env');\"",
+        "post-create-project-cmd": [
+            "composer dump-autoload",
+            "php --run \"touch('.env');\""
+        ],
         "test": [
             "phptest"
         ],
