--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,12 @@
             "composer dump-autoload",
             "php --run \"touch('.env');\""
         ],
-        "test": [
-            "phptest"
-        ],
+        "test": ["phptest"],
         "cs-fix": [
             "php-cs-fixer fix -v",
             "phpcbf src"
         ],
+        "compile": "php bin/compile.php",
         "clean": "rm -rf var/tmp/* var/log/* tests/tmp/*",
         "serve": "php -S 127.0.0.1:8080 -t public",
         "api": "php bootstrap/api",
