add test-coverage command

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,8 @@
             "php --run \"touch('.env');\""
         ],
         "test": ["phptest"],
-        "cs-fix": [
-            "php-cs-fixer fix -v",
-            "phpcbf src"
-        ],
+        "test-coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/api"],
+        "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
         "compile": "php bin/compile.php",
         "clean": "rm -rf var/tmp/* var/log/* tests/tmp/*",
         "serve": "php -S 127.0.0.1:8080 -t public",
