--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
-.buildpath
+/.env
 .DS_Store
-.idea
-.project
-.settings/
-.*.sw*
-.*.un~
-.env
-build/
-nbproject
-vendor
-var/log/*
-var/tmp/*
-tests/tmp/*
-
-!.placefolder
+/.idea/
+/vendor/
+/build/
+/var/log/
+/var/tmp/
+composer.lock
+phpunit.xml
