--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-.buildpath
-.DS_Store
-.idea
-.project
-.settings/
-.*.sw*
-.*.un~
 .env
-build/
-nbproject
-vendor
-var/log/*
-var/tmp/*
-tests/tmp/*
-
-!.placefolder
+.php_cs
+.php_cs.cache
+.DS_Store
+/.idea/
+/vendor/
+/build/
+/var/log/
+/var/tmp/
+composer.lock
+phpunit.xml
