--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "composer/composer": "^1.4",
-        "bear/qatools": "^1.4"
+        "bear/qatools": "^1.4.2",
+        "phpunit/phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
