exclude cs-fix for `var`

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -123,5 +123,6 @@ return \PhpCsFixer\Config::create()
     ->setUsingCache(false)
     ->setFinder(
         PhpCsFixer\Finder::create()
+            ->exclude('var')
             ->in(__DIR__)
     );
