--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
         "post-create-project-cmd": [
-            "composer dump-autoload",
-            "php --run \"touch('.env');\""
+            "composer dump-autoload"
         ],
         "test": ["phpunit"],
         "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
