--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,4 @@
-<phpunit bootstrap="./vendor/autoload.php">
+<phpunit bootstrap="./autoload.php">
     <testsuites>
         <testsuite>
             <directory suffix="Test.php">tests</directory>
