--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7.0",
         "roave/security-advisories": "dev-master",
-        "bear/package": "^1.5",
+        "bear/package": "^1.7.1",
         "josegonzalez/dotenv": "^2.1"
     },
     "require-dev": {
@@ -27,7 +27,7 @@
         "post-create-project-cmd": [
             "composer dump-autoload"
         ],
-        "test": ["phpunit"],
+        "test": ["phpunit", "@cs"],
         "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=./phpcs.xml src"],
         "cs-fix": ["php-cs-fixer fix -v", "phpcbf src"],
