use php-cs-fixer cache

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -120,7 +120,7 @@ return \PhpCsFixer\Config::create()
         'whitespace_after_comma_in_array' => true
     ))
     ->setLineEnding("\n")
-    ->setUsingCache(false)
+    ->setUsingCache(true)
     ->setFinder(
         PhpCsFixer\Finder::create()
             ->exclude('var')
