--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license":"MIT",
     "description": "Skeleton application for BEAR.Sunday",
     "require": {
-        "php": "^7.0",
-        "roave/security-advisories": "dev-master",
+      "php": ">=7.0.0",
+      "roave/security-advisories": "dev-master",
         "bear/package": "^1.7.2",
         "josegonzalez/dotenv": "^3.2"
     },
