--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,6 @@
             "vendor/bin/php-cs-fixer fix -v",
             "vendor/bin/phpcbf src tests"
         ],
-        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
-        "api": "php bootstrap/api.php",
-        "web": "php bootstrap/web.php"
+        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public"
     }
 }
