--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         }
     },
     "scripts" :{
+        "setup": ["php bin/setup.php"],
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
         "post-create-project-cmd": [
             "composer dump-autoload"
