Revert "remove composer api/web command"
This reverts commit 2d1b8f1afa48fabca635e65beb067503e52edf9e.

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,8 @@
             "vendor/bin/php-cs-fixer fix -v",
             "vendor/bin/phpcbf src tests"
         ],
-        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public"
+        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "api": "php bootstrap/api.php",
+        "web": "php bootstrap/web.php"
     }
 }
