--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "description": "Skeleton application for BEAR.Sunday",
     "require": {
         "php": ">=7.0.0",
-        "roave/security-advisories": "dev-master",
         "bear/package": "^1.7.12",
         "josegonzalez/dotenv": "^3.2"
     },
     "require-dev": {
-        "bear/qatools": "^1.5"
+        "bear/qatools": "^1.5",
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
