compile by commposer command

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "scripts" :{
         "setup": ["php bin/setup.php"],
-        "compile": ["php bin/compile.php"],
+        "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
         "post-create-project-cmd": [
             "composer dump-autoload"
