--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -10,7 +10,7 @@ return \PhpCsFixer\Config::create()
         'header_comment' => ['header' => $header, 'commentType' => 'PHPDoc', 'separate' => 'none'],
         'array_syntax' => ['syntax' => 'short'],
         'binary_operator_spaces' => ['align_equals' => false, 'align_double_arrow' => false],
-        'blank_line_after_opening_tag' => true,
+        'blank_line_after_opening_tag' => false,
         'blank_line_after_namespace' => false,
         'blank_line_before_return' => true,
         'cast_spaces' => true,
