change context file name
api.php to app.php (app resource)
web.php to page.php (page resource)

--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,8 @@
             "phpcbf src tests"
         ],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
-        "api": "php bin/api.php",
-        "web": "php bin/web.php"
+        "app": "php bin/app.php",
+        "page": "php bin/page.php"
     },
     "scripts-descriptions": {
         "setup": "Setup the project",
@@ -58,8 +58,8 @@
         "cs": "Checks the coding standard",
         "cs-fix": "Fix the coding standard",
         "serve": "Start php built-in server",
-        "api": "Request app resource",
-        "web": "Request page resource"
+        "app": "Request app resource",
+        "page": "Request page resource"
     },
     "config": {
         "process-timeout":0
