--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "require-dev": {
         "bear/qatools": "^1.5",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "composer/composer": "^1.7"
     },
     "autoload": {
         "psr-4": {
