--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <phpunit bootstrap="./vendor/autoload.php">
     <testsuites>
-        <testsuite>
+        <testsuite name="Resource Tests">
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
