--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,9 @@ cache:
   directories:
     - vendor
     - $HOME/.composer/cache
-env:
-  matrix:
-    - DEPENDENCIES=''
-    - DEPENDENCIES='--prefer-lowest --prefer-stable'
 before_script:
   - composer self-update
-  - if [[ $TRAVIS_PHP_VERSION = '7.3' ]]; then composer update --no-scripts --ignore-platform-reqs $DEPENDENCIES; else composer update --no-scripts $DEPENDENCIES; fi
+  - if [[ $TRAVIS_PHP_VERSION = '7.3' ]]; then composer update --no-scripts --ignore-platform-reqs; else composer update --no-scripts; fi
   - composer dump-autoload
 script:
   - php bin/page.php get /
