add PHP7.3 to the build matrix (#74)
* fix cs

* Update .travis.yml

* Update composer.json

* add name attrib

* remove prefer-lowest test

--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         "josegonzalez/dotenv": "^3.2"
     },
     "require-dev": {
-        "bear/qatools": "^1.7",
+        "bear/qatools": "dev-master",
         "roave/security-advisories": "dev-master",
-        "composer/composer": "^1.7"
+        "composer/composer": "^1.7.1"
     },
     "autoload": {
         "psr-4": {
