--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,19 @@ php:
   - 7
   - 7.1
   - 7.2
+  - 7.3
 cache:
   directories:
     - vendor
     - $HOME/.composer/cache
-env:
-  matrix:
-    - DEPENDENCIES=''
-    - DEPENDENCIES='--prefer-lowest --prefer-stable'
 before_script:
   - composer self-update
-  - composer update --no-interaction $DEPENDENCIES
+  - if [[ $TRAVIS_PHP_VERSION = '7.3' ]]; then composer update --no-scripts --ignore-platform-reqs; else composer update --no-scripts; fi
   - composer dump-autoload
-  - if [[ $TRAVIS_PHP_VERSION = '7.2' && DEPENDENCIES = '' ]]; then COVERAGE="--coverage-clover=coverage.clover"; else phpenv config-rm xdebug.ini; fi
-  - if [[ $TRAVIS_PHP_VERSION = '7.2' && DEPENDENCIES = '' ]]; then composer require --dev phpstan/phpstan-shim friendsofphp/php-cs-fixer; fi
 script:
   - php bin/page.php get /
-  - ./vendor/bin/phpunit $COVERAGE;
-  - if [[ $TRAVIS_PHP_VERSION = '7.2' && DEPENDENCIES = '' ]]; then IFS=$'\n'; COMMIT_SCA_FILES=($(git diff --name-only --diff-filter=ACMRTUXB "${TRAVIS_COMMIT_RANGE}")); unset IFS && ./vendor/bin/php-cs-fixer fix --config=.php_cs -v --dry-run --stop-on-violation --using-cache=no --path-mode=intersection -- "${COMMIT_SCA_FILES[@]}";fi
-  - if [[ $TRAVIS_PHP_VERSION = '7.2' && DEPENDENCIES = '' ]]; then ./vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction; fi
+  - if [[ $TRAVIS_PHP_VERSION = '7.2' ]]; then ./vendor/bin/php-cs-fixer --dry-run -vvv fix; fi
+  - if [[ $TRAVIS_PHP_VERSION = '7.2' ]]; then ./vendor/bin/phpstan analyse -l max -c phpstan.neon src tests --no-progress --no-interaction; fi
+  - if [[ $TRAVIS_PHP_VERSION = '7.2' ]]; then ./vendor/bin/phpunit --coverage-clover=coverage.clover; else ./vendor/bin/phpunit; fi
 after_script:
   - if [[ $TRAVIS_PHP_VERSION = '7.2' ]]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
