--- a/composer.json
+++ b/composer.json
@@ -24,29 +24,18 @@
         }
     },
     "scripts" :{
-        "setup": ["php bin/setup.php"],
-        "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
         "post-create-project-cmd": [
             "composer dump-autoload"
         ],
+        "setup": ["php bin/setup.php"],
+        "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "test": ["phpunit"],
-        "tests": [
-            "@cs",
-            "phpmd src,tests text ./phpmd.xml",
-            "phpstan analyse -l max src tests -c phpstan.neon --no-progress",
-            "@test"
-        ],
+        "tests": ["@cs", "phpmd src,tests text ./phpmd.xml", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "@test"],
         "coverage": ["php -dzend_extension=xdebug.so phpunit --coverage-text --coverage-html=build/coverage"],
-        "cs": [
-            "php-cs-fixer fix -v --dry-run",
-            "phpcs --standard=phpcs.xml src;"
-        ],
-        "cs-fix": [
-            "php-cs-fixer fix -v",
-            "phpcbf src tests"
-        ],
-        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
+        "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml src;"],
+        "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
+        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public"
         "app": "php bin/app.php",
         "page": "php bin/page.php"
     },
