--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     },
     "require-dev": {
         "bear/qatools": "^1.7",
-        "roave/security-advisories": "dev-master",
-        "composer/composer": "^1.7.1"
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -35,7 +34,7 @@
         "coverage": ["php -dzend_extension=xdebug.so phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml src;"],
         "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
-        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public"
+        "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
         "page": "php bin/page.php"
     },
