--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,14 @@
     "license":"MIT",
     "description": "Skeleton application for BEAR.Sunday",
     "require": {
-        "php": "7.0.*",
+        "php": ">=7.1 <7.3",
         "bear/package": "^1.9",
         "josegonzalez/dotenv": "^3.2"
     },
     "require-dev": {
-        "bear/qatools": "^1.7",
+        "bear/qatools": "^1.9",
         "roave/security-advisories": "dev-master",
-        "composer/composer": "^1.7.1"
+        "composer/composer": "^1.8.4"
     },
     "autoload": {
         "psr-4": {
