--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "post-create-project-cmd": [
             "composer dump-autoload"
         ],
+        "post-install-cmd": ["@setup"],
+        "post-update-cmd": ["@setup"],
         "setup": ["php bin/setup.php"],
         "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "test": ["phpunit"],
