--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     },
     "require-dev": {
         "bear/qatools": "^1.9",
-        "roave/security-advisories": "dev-master",
-        "composer/composer": "^1.8.4"
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
