--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,20 +1,16 @@
 <?php
-
-$header = <<<'EOF'
-EOF;
-
 return \PhpCsFixer\Config::create()
     ->setRiskyAllowed(true)
     ->setRules(array(
         '@PSR2' => true,
-//      'header_comment' => ['header' => $header, 'commentType' => 'PHPDoc', 'separate' => 'none'],
+//      'header_comment' => ['header' => ''', 'commentType' => 'PHPDoc', 'separate' => 'none'],
         'array_syntax' => ['syntax' => 'short'],
         'binary_operator_spaces' => ['align_equals' => false, 'align_double_arrow' => false],
         'blank_line_after_opening_tag' => false,
         'blank_line_after_namespace' => false,
         'blank_line_before_return' => true,
         'cast_spaces' => true,
-//        'class_keyword_remove' => true,
+//       'class_keyword_remove' => true,
         'combine_consecutive_unsets' => true,
         'concat_space' => ['spacing' => 'one'],
         'declare_equal_normalize' => true,
@@ -30,11 +26,11 @@ return \PhpCsFixer\Config::create()
         'is_null' => ['use_yoda_style' => false],
         'linebreak_after_opening_tag' => true,
         'lowercase_cast' => true,
-//        'mb_str_functions' => true,
+//      'mb_str_functions' => true,
         'method_separation' => true,
         'modernize_types_casting' => true,
         'native_function_casing' => true,
-//        'native_function_invocation' => true,
+//      'native_function_invocation' => true,
         'new_with_braces' => false, //
         'no_alias_functions' => true,
         'no_blank_lines_after_class_opening' => true,
@@ -90,13 +86,13 @@ return \PhpCsFixer\Config::create()
         'phpdoc_scalar' => true,
         'phpdoc_separation' => true,
         'phpdoc_single_line_var_spacing' => true,
-//        'phpdoc_summary' => true,
+//      'phpdoc_summary' => true,
         'phpdoc_to_comment' => true,
         'phpdoc_trim' => true,
         'phpdoc_types' => true,
         'phpdoc_var_without_name' => true,
         'pow_to_exponentiation' => true,
-//        'pre_increment' => true,
+//      'pre_increment' => true,
         'protected_to_private' => true,
         'psr0' => true,
         'psr4' => true,
@@ -105,16 +101,16 @@ return \PhpCsFixer\Config::create()
         'self_accessor' => true,
         'short_scalar_cast' => true,
         'silenced_deprecation_error' => true,
-//        'simplified_null_return' => true,
-//        'single_blank_line_before_namespace' => true,
+//      'simplified_null_return' => true,
+//      'single_blank_line_before_namespace' => true,
         'single_quote' => true,
         'space_after_semicolon' => true,
         'standardize_not_equals' => true,
-//        'strict_comparison' => true,
+//      'strict_comparison' => true,
         'ternary_operator_spaces' => true,
         'strict_param' => true,
         'ternary_to_null_coalescing' => true,
-//        'trailing_comma_in_multiline_array' => true,
+//      'trailing_comma_in_multiline_array' => true,
         'trim_array_spaces' => true,
         'unary_operator_spaces' => true,
         'whitespace_after_comma_in_array' => true
