--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,13 @@
     },
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
-        "post-create-project-cmd": [
-            "composer dump-autoload"
-        ],
+        "post-create-project-cmd": ["composer dump-autoload", "psalm --init"],
         "post-install-cmd": ["@setup"],
         "post-update-cmd": ["@setup"],
         "setup": ["php bin/setup.php"],
         "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "test": ["phpunit"],
-        "tests": ["@cs", "phpmd src,tests text ./phpmd.xml", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "@test"],
+        "tests": ["@cs", "phpmd src text ./phpmd.xml", "phpstan analyse -l max src tests -c phpstan.neon --no-progress", "psalm", "@test"],
         "coverage": ["php -dzend_extension=xdebug.so phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml src;"],
         "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
