comment out phpdoc_to_comment

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -87,7 +87,7 @@ return \PhpCsFixer\Config::create()
         'phpdoc_separation' => true,
         'phpdoc_single_line_var_spacing' => true,
 //      'phpdoc_summary' => true,
-        'phpdoc_to_comment' => true,
+//      'phpdoc_to_comment' => true,
         'phpdoc_trim' => true,
         'phpdoc_types' => true,
         'phpdoc_var_without_name' => true,
