--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require-dev": {
         "bear/qatools": "^1.9",
         "josegonzalez/dotenv": "^3.2",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "symfony/dotenv": "^5.0"
     },
     "autoload": {
         "psr-4": {
