--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "description": "Skeleton application for BEAR.Sunday",
     "require": {
         "php": ">=7.2.0",
+        "bear/resource": "1.x-dev",
+        "bear/sunday": "1.x-dev",
         "bear/package": "1.x-dev",
         "ray/compiler": "1.x-dev"
     },
