--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,15 @@
     },
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
-        "post-create-project-cmd": ["composer cs-fix", "composer dump-autoload"],
+        "post-create-project-cmd": ["php-cs-fixer fix --quiet ", "composer dump-autoload --quiet"],
         "post-install-cmd": ["@setup"],
         "post-update-cmd": ["@setup"],
         "setup": ["php bin/setup.php"],
         "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "test": ["phpunit"],
-        "tests": ["@cs", "phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm", "@test"],
+        "tests": ["@cs", "phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress", "@test"],
         "coverage": ["php -dzend_extension=xdebug.so phpunit --coverage-text --coverage-html=build/coverage"],
-        "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml src;"],
+        "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml"],
         "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
