fix-cs src and tetsts only

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -9,7 +9,7 @@ EOF;
 
 $finder = PhpCsFixer\Finder::create()
     ->exclude(['tests/Fake', 'tests/tmp'])
-    ->in(__DIR__);
+    ->in(['src', 'tests']);
 
 return \PhpCsFixer\Config::create()
     ->setRiskyAllowed(true)
