--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
         "test": ["phpunit"],
         "tests": ["@cs", "phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress", "@test"],
-        "coverage": ["php -dzend_extension=xdebug.so phpunit --coverage-text --coverage-html=build/coverage"],
+        "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml"],
         "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
