--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,12 @@
             <directory suffix="Test.php">tests/Http</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true" addUncoveredFilesFromWhitelist="false">
+            <directory suffix=".php">src/Module</directory>
+            <directory suffix=".php">src/Resource</directory>
+        </whitelist>
+    </filter>
     <php>
         <ini name="error_reporting" value="-1" />
     </php>
