--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "bear/devtools": "0.1.0",
         "bear/qatools": "^1.9.6",
+        "doctrine/coding-standard": "^8.0",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
@@ -34,8 +35,8 @@
         "tests": ["@cs", "@qa", "@test"],
         "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "pcov": ["php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
-        "cs": ["php-cs-fixer fix -v --dry-run", "phpcs --standard=phpcs.xml"],
-        "cs-fix": ["php-cs-fixer fix -v", "phpcbf src tests"],
+        "cs": ["phpcs"],
+        "cs-fix": ["phpcbf"],
         "qa": ["phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
