--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
-        "post-create-project-cmd": ["php-cs-fixer fix --quiet ", "composer dump-autoload --quiet"],
+        "post-create-project-cmd": ["phpcbf -q", "composer dump-autoload --quiet"],
         "post-install-cmd": ["@setup"],
         "post-update-cmd": ["@setup"],
         "setup": ["php bin/setup.php"],
