--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
-        "post-create-project-cmd": ["./vendor/bin/phpcbf --quiet; if [ $? -eq 1 ]; then exit 0; fi", "composer dump-autoload --quiet"],
+        "post-create-project-cmd": ["./vendor/bin/phpcbf -q > /dev/null || true", "composer dump-autoload --quiet"],
         "post-install-cmd": ["@setup"],
         "post-update-cmd": ["@setup"],
         "setup": ["php bin/setup.php"],
@@ -36,7 +36,7 @@
         "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "pcov": ["php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["phpcs"],
-        "cs-fix": ["phpcbf"],
+        "cs-fix": ["phpcbf; if [ $? -eq 1 ]; then exit 0; fi"],
         "qa": ["phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
