--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Skeleton application for BEAR.Sunday",
     "require": {
         "php": ">=7.2.0",
-        "bear/package": "1.x-dev",
+        "bear/package": "^1.10",
         "symfony/dotenv": "^5.0"
     },
     "require-dev": {
