--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     },
     "require-dev": {
         "bear/devtools": "0.1.0",
-        "bear/qatools": "^1.9.6",
-        "doctrine/coding-standard": "^8.0",
+        "bear/qatools": "^1.9.9",
+        "doctrine/coding-standard": "^8.1",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
@@ -36,7 +36,7 @@
         "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "pcov": ["php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
         "cs": ["phpcs"],
-        "cs-fix": ["phpcbf; if [ $? -eq 1 ]; then exit 0; fi"],
+        "cs-fix": ["phpcbf"],
         "qa": ["phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
