--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - composer self-update
 
 install:
-  - composer update --no-scripts
+  - composer update -n
   - composer dump-autoload
 
 script:
