--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ install:
   - composer dump-autoload
 
 script:
-  - composer test
+  - phpunit --testsuite Resource,Hypermedia
   - php bin/page.php get /
